--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>de.netzwerk-universitaetsmedizin.codex</groupId>
     <artifactId>codex-processes-ap2</artifactId>
     <version>0.1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <modules>
         <module>codex-process-feasibility</module>
