--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,9 @@ jobs:
       with:
         servers: '[{"id": "highmed-dsf", "username": "${{ github.actor }}", "password": "${{ secrets.GITHUB_TOKEN }}"}]'
 
+    - name: Set Version in Maven Parent Project and Submodules
+      run: mvn -q versions:set -DnewVersion="${{ steps.prep.outputs.version }}" -DprocessAllModules=true
+
     - name: Build with Maven
       run: mvn -B deploy -DskipTests --file codex-process-feasibility/pom.xml
       env:
