--- a/feasibility-dsf-process/pom.xml
+++ b/feasibility-dsf-process/pom.xml
@@ -25,16 +25,59 @@
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- test dependencies -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.squareup.okhttp3</groupId>-->
+        <!--            <artifactId>mockwebserver</artifactId>-->
+        <!--            <version>3.8.1</version>-->
+        <!--            <scope>test</scope>-->
+        <!--        </dependency>-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>4.9.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp-tls</artifactId>
+            <version>4.9.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.16.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>nginx</artifactId>
+            <version>1.16.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>1.16.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -52,6 +95,37 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M6</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>${basedir}/scripts/create_certs_for_store_client_tests.sh</executable>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -87,7 +161,8 @@
                                     <artifactId>hapi-fhir-client</artifactId>
                                 </artifactItem>
                             </artifactItems>
-                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-1/bpe/plugin</outputDirectory>
+                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-1/bpe/plugin
+                            </outputDirectory>
                         </configuration>
                     </execution>
                     <execution>
@@ -121,7 +196,8 @@
                                     <artifactId>hapi-fhir-client</artifactId>
                                 </artifactItem>
                             </artifactItems>
-                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-2/bpe/plugin</outputDirectory>
+                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-2/bpe/plugin
+                            </outputDirectory>
                         </configuration>
                     </execution>
                     <execution>
@@ -155,7 +231,8 @@
                                     <artifactId>hapi-fhir-client</artifactId>
                                 </artifactItem>
                             </artifactItems>
-                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-3/bpe/plugin</outputDirectory>
+                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/dic-3/bpe/plugin
+                            </outputDirectory>
                         </configuration>
                     </execution>
                     <execution>
@@ -172,7 +249,8 @@
                                     <version>${project.version}</version>
                                 </artifactItem>
                             </artifactItems>
-                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/zars/bpe/process</outputDirectory>
+                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/zars/bpe/process
+                            </outputDirectory>
                         </configuration>
                     </execution>
                     <execution>
@@ -188,7 +266,8 @@
                                     <artifactId>hapi-fhir-client</artifactId>
                                 </artifactItem>
                             </artifactItems>
-                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/zars/bpe/plugin</outputDirectory>
+                            <outputDirectory>../feasibility-dsf-process-docker-test-setup/zars/bpe/plugin
+                            </outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
