Add DIC 3 Setup
This is intended for showcasing proxy support (specifically
if one is installed in front of a FHIR store other than the
mailbox).
The proxy also comes with a self-signed certificate in order
to check trust store capabilities of the store client.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 /feasibility-dsf-process-docker-test-setup/.env
 /feasibility-dsf-process-docker-test-setup/secrets/*.pem
+/feasibility-dsf-process-docker-test-setup/secrets/*.p12
 
 /feasibility-dsf-process-docker-test-setup/dic-1/bpe/last_event/time.file
 /feasibility-dsf-process-docker-test-setup/dic-1/bpe/log/*.log
