--- a/feasibility-dsf-process-docker-test-setup/docker-compose.yml
+++ b/feasibility-dsf-process-docker-test-setup/docker-compose.yml
@@ -161,7 +161,7 @@ services:
       internet:
     depends_on:
     - db
-    - proxy
+    - zars-fhir-app
 
   # ---- DIC-1 - FHIR ---------------------------------------------------------
   dic-1-fhir-app:
@@ -262,8 +262,7 @@ services:
       internet:
     depends_on:
     - db
-    - dic-1-store
-    - proxy
+    - dic-1-fhir-app
 
   # ---- DIC-1 - FHIR Data Store ----------------------------------------------
   dic-1-store:
@@ -410,20 +409,22 @@ services:
       internet:
     depends_on:
     - db
+    - dic-2-fhir-app
     - dic-2-store
-    - proxy
 
   # ---- DIC-2 - FHIR Data Store ----------------------------------------------
   dic-2-store:
-    image: samply/blaze:0.10.3
+    image: samply/blaze:0.16.4
     restart: on-failure
     ports:
-    - "8072:8080"
+    - "127.0.0.1:8080:8080"
     environment:
-      BASE_URL: http://localhost:8072
+      BASE_URL: http://127.0.0.1:8080
       LOG_LEVEL: debug
     networks:
-    - dic-2-bpe-backend
+      dic-2-bpe-backend:
+        aliases:
+          - dic-2-store
     volumes:
     - type: volume
       source: dic-2-store-data
