reset depends on of dic-1-bpe-app

--- a/feasibility-dsf-process-docker-test-setup/docker-compose.yml
+++ b/feasibility-dsf-process-docker-test-setup/docker-compose.yml
@@ -263,6 +263,7 @@ services:
     depends_on:
     - db
     - dic-1-fhir-app
+    - dic-1-store
 
   # ---- DIC-1 - FHIR Data Store ----------------------------------------------
   dic-1-store:
