--- a/feasibility-dsf-process/pom.xml
+++ b/feasibility-dsf-process/pom.xml
@@ -115,7 +115,7 @@
                 <version>3.0.0</version>
                 <executions>
                     <execution>
-                        <phase>pre-integration-test</phase>
+                        <phase>generate-test-resources</phase>
                         <goals>
                             <goal>exec</goal>
                         </goals>
