change netzwerk-universitaetsmedizin to medizinformatik-initiative

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,16 @@
 /feasibility-dsf-process-docker-test-setup/dic-2/fhir/log/*.log
 /feasibility-dsf-process-docker-test-setup/dic-2/fhir/log/*.log.gz
 
+/feasibility-dsf-process-docker-test-setup/dic-3/bpe/last_event/time.file
+/feasibility-dsf-process-docker-test-setup/dic-3/bpe/log/*.log
+/feasibility-dsf-process-docker-test-setup/dic-3/bpe/log/*.log.gz
+/feasibility-dsf-process-docker-test-setup/dic-3/bpe/plugin/*.jar
+/feasibility-dsf-process-docker-test-setup/dic-3/bpe/process/*.jar
+/feasibility-dsf-process-docker-test-setup/dic-3/fhir/conf/bundle.xml
+/feasibility-dsf-process-docker-test-setup/dic-3/fhir/conf/config.properties
+/feasibility-dsf-process-docker-test-setup/dic-3/fhir/log/*.log
+/feasibility-dsf-process-docker-test-setup/dic-3/fhir/log/*.log.gz
+
 /feasibility-dsf-process-docker-test-setup/zars/bpe/last_event/time.file
 /feasibility-dsf-process-docker-test-setup/zars/bpe/log/*.log
 /feasibility-dsf-process-docker-test-setup/zars/bpe/log/*.log.gz
